Fix: Capacitor webDir and profile unmatch; chat header profile link

--- a/mobile/capacitor.config.json
+++ b/mobile/capacitor.config.json
@@ -1,7 +1,7 @@
 {
   "appId": "com.binge.app",
   "appName": "Binge",
-  "webDir": "web",
+  "webDir": "../backend/public",
   "server": {
     "androidScheme": "https"
   }
